--- a/main.yaml
+++ b/main.yaml
@@ -12,7 +12,7 @@ Parameters:
 
   AvailabilityZones:
     Type: List<AWS::EC2::AvailabilityZone::Name>
-    Description: The list of Availability Zones to use for the subnets in the VPC. Select 2 AZs.
+    Description: The list of Availability Zones to use for the subnets in the VPC.
 
   VPCName:
     Type: String
@@ -33,23 +33,6 @@ Parameters:
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
     Default: 10.0.0.0/24
 
-  PublicSubnet2Cidr:
-    Type: String
-    Description: The CIDR block for the public subnet located in Availability Zone 2.
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
-    Default: 10.0.1.0/24
-
-  EnvironmentType:
-    Description: 'Specify the Environment type of the stack.'
-    Type: String
-    Default: Test
-    AllowedValues:
-      - Dev
-      - Test
-      - Prod
-    ConstraintDescription: 'Specify either Dev, Test or Prod.'
-
 Resources:
   VpcStack:
     Type: AWS::CloudFormation::Stack
@@ -64,7 +47,6 @@ Resources:
         VPCCidr: !Ref VPCCidr
         VPCName: !Ref VPCName
         PublicSubnet1Cidr: !Ref PublicSubnet1Cidr
-        PublicSubnet2Cidr: !Ref PublicSubnet2Cidr
 
   IamStack:
     Type: AWS::CloudFormation::Stack
@@ -78,7 +60,6 @@ Resources:
       TemplateURL: !Sub https://${S3BucketName}.s3.amazonaws.com/ec2.yaml
       TimeoutInMinutes: 20
       Parameters:
-        EnvironmentType: !Ref EnvironmentType
         VpcId: !GetAtt VpcStack.Outputs.VpcId
         SubnetId: !GetAtt VpcStack.Outputs.PublicSubnet1
         WebServerInstanceProfile: !GetAtt IamStack.Outputs.WebServerInstanceProfile
@@ -90,7 +71,3 @@ Resources:
       TimeoutInMinutes: 20
       Parameters:
         StackId: !GetAtt EC2Stack.Outputs.StackId
-
-Outputs:
-  WebsiteURL:
-    Value: !GetAtt EC2Stack.Outputs.WebsiteURL
