adding encryption to kinesis

--- a/cloudwatch_logs.yaml
+++ b/cloudwatch_logs.yaml
@@ -19,6 +19,9 @@ Resources:
       Name: !Ref KinesisStreamName
       RetentionPeriodHours: 24
       ShardCount: 1
+      StreamEncryption:
+        EncryptionType: KMS
+        KeyId: alias/aws/kinesis
     
   KinesisIAMRole:
     Type: AWS::IAM::Role
